# Agentic-AI

./: .dockerignore  .gitignore  AGENTS.md  AUTO_BUILD_MASTER_GUIDE.md  AUTO_BUILD_PROMPT_1.md  AUTO_BUILD_PROMPT_2.md  CLAUDE.md  Dockerfile  Dockerfile.dev  GEMINI.md  LICENSE  Makefile  README.md  RUN_ALL_README.md  __main__.py  build_log.md  cleanup.ps1  commit_message.txt  config.yaml  docker-compose.dev.yml  docker-compose.yml  full_test_output.txt  pyproject.toml  pytest.ini  requirements.txt  run_all.bat  run_all.ps1  run_all.sh  run_api_server.py  setup.py  start_system.bat  start_system.ps1  test_imports.py  test_output.txt  test_review_agent.py  test_review_workflow.py  test_sample.py  test_security_rules.py
.ai_support/index_cache/: file_hashes.json
.claude/skills/: SKILL.md
.cursor/plans/: EVALUATION.plan.md  EVALUATION_REPORT.plan.md  specialized_agents_architecture.plan.md
.cursor/rules/: 00-core.mdc  ai-support-guide.mdc  code-formatting.mdc  embedded-agent-cli.mdc  embedded-c-quality.mdc  firmware-workflow.mdc  folder-structure.mdc  project-structure.mdc  python-ai-support.mdc  unit-testing-standards.mdc
.github/: AGENTS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: build-system-agent.md  code-review-agent.md  content-summarizer.md  documentation-agent.md  embedded-systems-agent.md  (+3 more)
.kilo/: agent-manager.json  kilo.json
.kilo/worktrees/lithe-hedgehog/software/RemoteControl/Project/Chip/Stm32F407/CarRemote/: CMakeLists.txt
.kilo/worktrees/lithe-hedgehog/software/RemoteControl/Project/Chip/Stm32F407/CarRemote/Main/Inc/: main.h
.kilo/worktrees/lithe-hedgehog/software/RemoteControl/Project/Chip/Stm32F407/CarRemote/Main/Src/: main.c
ai-support-extension/: .vscodeignore  README.md  ai-support-0.1.0.vsix  package-lock.json  package.json  tsconfig.json
benchmarks/: indexing_benchmark.py
configs/: ai_support_rules.yaml  llm.yaml  logging.yaml  pipeline.yaml
docs/: AI_CONFIGURATION_GUIDE.md  AI_SUPPORT_IMPROVEMENTS_SUMMARY.md  AI_SUPPORT_README.md  AI_SUPPORT_RULES.md  API.md  CLI_README.md  CONFIGURATION.md  ERA_ROADMAP.md  HYBRID_ARCHITECTURE_PLAN.md  LLM_SETUP.md  P0_ROADMAP.md  PRODUCTION_READINESS_REVIEW.md  PROMPTS_REVIEW.md  QUICKSTART.md  REAL_AI_INFRASTRUCTURE.md  STRUCTURE_TREE.md  WEAKNESS_FIXES.md  WEAKNESS_REVIEW_REPORT.md  architecture.md  competitors.md  constraints.md  phase1a.md  phase1b.md  phase2a.md  phase2b.md  phase2c.md  phase2d.1.md  phase2d.md  phase3.md  phase4a.md  phase4a_error_handling.md  phase4b_tool_cache.md  phase4c_semantic_router.md  phase4d1_compression.md  phase4d_compression.md  phase4e_compression_production_fixes.md  phase5a_workflow_runtime.md  phase5b_planner_enterprise.md  phase5b_v10_enterprise.md  phase5d_multi_agent_coordination.md  (+10 more)
editor-core/: .gitignore  Cargo.toml  README.md
editor-core/docs/: ADR.md  CONTEXT_BUILDER.md  MODEL_RUNTIME.md  NEXT_EDIT_IPC.md  POLICY_LAYER.md  SYMBOL_GRAPH_SPEC.md
editor-core/src/: capability.rs  context.rs  execution.rs  inference.rs  ipc.rs  lib.rs  main.rs  planner.rs  protocol.rs  semantic.rs  telemetry.rs
editor-core/src/detector/: mod.rs  rules.rs
editor-core/src/index/: merkle.rs  mod.rs
editor-core/src/model_runtime/: dto.rs  invocation.rs  mod.rs  prompt.rs  provider.rs  selection.rs  session.rs  validation.rs
editor-core/src/retrieval/: chunks.rs  embed.rs  lance_store.rs  lexical.rs  mod.rs  ollama.rs  vector.rs
editor-core/src/symbols/: classifier.rs  extract.rs  lang.rs  mod.rs  store.rs
editor-core/tests/: capability_test.rs  context_build_test.rs  detector_config_test.rs  detector_test.rs  execution_test.rs  fix_test.rs  index_test.rs  ipc_test.rs  model_runtime_test.rs  planner_test.rs  protocol_test.rs  retrieval_test.rs  semantic_test.rs  symbols_test.rs
editor-extension/: .vscodeignore  README.md  package-lock.json  package.json
examples/: basic_chat.py  hardware_analysis.py
fork/: .gitignore  DOGFOODING.md  README.md
prompts/: README.md  _TEMPLATE.md  phase_10.md  phase_10_101.md  phase_10_102.md  phase_10_103.md  phase_10_104.md  phase_10_105.md  phase_10_106.md  phase_10_106a.md  phase_10_106b.md  phase_11.md  phase_11_111.md  phase_11_112.md  phase_11_113.md  phase_11_114.md  phase_11_114a.md  phase_11_114b.md  phase_11_115.md  phase_11_116.md  phase_12.md  phase_12_121.md  phase_12_122.md  phase_12_123.md  phase_12_123a.md  phase_12_123b.md  phase_12_124.md  phase_12_125.md  phase_13.md  phase_13_131.md  phase_13_132.md  phase_13_133.md  phase_13_134.md  phase_13_135.md  phase_13_136.md  phase_13_137.md  phase_13b.md  phase_13b_13b1.md  phase_13b_13b2.md  phase_13b_13b3.md  (+123 more)
scripts/: auto_workflow.py  convert_pdf_to_markdown.py  convert_plugins_to_markdown.py  deepseek_cursor_batch.py  deepseek_cursor_orchestrator.py  deepseek_review_loop.py  format.sh  generate_prompts.py  lint.sh  paste_to_cursor.py  run_benchmarks.py  setup_ai_provider.py  typecheck.sh
src/: models.py  runtime.py  scheduler.py
src/infrastructure/performance/rust/: Cargo.toml
src/infrastructure/performance/rust/src/: main.rs
tests/: __init__.py  board_profile.json  conftest.py  phase5b_test_suite.py  pytest.ini  test_agent_control_flow.py  test_agent_executor.py  test_aikicad_agent.py  test_api_server.py  test_chaos.py  test_crv_integration.py  test_dashboard_e2e.py  test_embedded_agent_bootstrap.py  test_embedded_agent_regression.py  test_events.py  test_features_2025.py  test_firmware.json  test_firmware_agent_v2.py  test_firmware_validation.json  test_flash_tools.py  test_hardware.py  test_hardware_engine.py  test_hil_e2e.py  test_kicad.json  test_learning.py  test_multi_agent.py  test_observability.py  test_orchestration.py  test_output_policy.py  test_p2_sandbox.py  test_p3_observability.py  test_p4_retrieval.py  test_p5_memory.py  test_p6_distributed.py  test_p7_hardware.py  test_p8_adaptive_learning.py  test_p9_production_concepts.py  test_p9_production_runtime.py  test_path_validation.py  test_pdf_benchmark.py  (+15 more)
tools/: generate_root_key.py
vscode-extension/: README.md  package.json  tsconfig.json
(+2038 files in other folders)
