[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AI_support"
version = "0.1.0"
description = "Local embedded AI engineering intelligence platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CARV Team", email = "team@carv.local"}
]
dependencies = [
    "aiosqlite>=0.19.0",
    "aiohttp>=3.12.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.0",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "chromadb>=1.0.0",
    "openai>=2.31.0",
    "anthropic>=0.40.0",
    "ollama>=0.5.0",
    "langchain>=0.3.0",
    "structlog>=25.0.0",
    "opentelemetry-api>=1.35.0",
    "opentelemetry-sdk>=1.35.0",
    "opentelemetry-exporter-otlp>=1.35.0",
    "opentelemetry-instrumentation-asgi>=0.46b0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "httpx>=0.28.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "websockets>=15.0.0",
    "mcp>=1.0.0,<2.0.0",
    "pyyaml>=6.0",
    "cachetools>=5.5.0",
    "tree-sitter-languages>=1.10.0",
    "watchdog>=3.0.0",
    "pygls>=1.0.0",
    "pygments>=2.17.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.0",
    "mypy>=1.0.0",
    "pre-commit>=4.0.0",
]
server = [
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.0",
]
dashboard = [
    "streamlit>=1.47.0",
]

[project.scripts]
# NOTE: Entry points must reference modules that actually exist under src/.
# The server is implemented as a FastAPI app in `interfaces.server.main:app`.
# The CLI entry point is `agentic_ai.cli:main`.
ai-support = "agentic_ai.cli:main"
ai-server = "interfaces.server.main:app"
agentic-ai = "agentic_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-dir]
"" = "src"
"agentic_ai" = "src/agentic_ai"

[tool.ruff]
line-length = 100
target-version = "py310"
src-path = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "DTZ", "T10", "ISC"]
ignore = ["E501", "B028", "UP007"]

[tool.mypy]
python_version = "3.10"
src_path = ["src"]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
addopts = "-v"
