[package]
name = "aircore"
version = "0.1.0"
edition = "2021"
description = "Local AI editor core daemon: indexing, retrieval, and inference routing"
license = "MIT"

[[bin]]
name = "aircore"
path = "src/main.rs"

[dependencies]
# Serialization / protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Indexing hot path
blake3 = "1"
rayon = "1"
ignore = "0.4"          # ripgrep's gitignore-aware parallel walker

# Symbol graph
rusqlite = { version = "0.32", features = ["bundled"] }  # bundled = no system sqlite
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
streaming-iterator = "0.1"   # tree-sitter 0.24 query matches are streaming iterators

# Errors / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[dev-dependencies]
tempfile = "3"
