[package]
name = "ai-support-cli"
version = "0.1.0"
edition = "2021"
description = "High-performance CLI utilities for Agentic-AI"
authors = ["Agentic-AI Team"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
sha2 = "0.10"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "ai-support-cli"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
